
# Include the README in the tarball, but do not install it.
EXTRA_DIST=
	README                      \
	ar/arabiclg_one_sentence.sh \
	ar/buck2lg.pl               \
	ar/README                   \
	fa/orthography.tex          \
	fa/orthography.txt          \
	fa/persianparse.sh          \
	fa/README                   \
	fa/stemmer.pl               \
	fa/scripts/isiri2roman_1-2.pl     \
	fa/scripts/isiri2unicode_1-1.pl   \
	fa/scripts/roman2unicode_1-5.pl   \
	fa/scripts/unicode2roman_1-4.pl   \
	fa/scripts/unvowel_it.sh          \
	fa/scripts/utf8_2_roman_1-7.pl    \
	fa/scripts/win1256_2_roman_1-5.pl \
	fa/scripts/win1256_2_roman.tcl
